[gd_scene load_steps=13 format=3 uid="uid://cafe0sdub6es5"]

[ext_resource type="Script" uid="uid://dfwnnc48q7eyo" path="res://tests/pie_chart_properties/subject.gd" id="1_25jiw"]
[ext_resource type="Script" uid="uid://cb7e18os3hcsl" path="res://tests/pie_chart_properties/entry_label.gd" id="2_ti7r4"]
[ext_resource type="Script" uid="uid://ce13kc3ly1b1y" path="res://src/pie_chart_entry.gd" id="3_ti7r4"]
[ext_resource type="Script" uid="uid://w8g4uchaio4c" path="res://src/pie_chart_entry_label.gd" id="4_ixbmg"]
[ext_resource type="Script" uid="uid://cq8dkpy0pphcb" path="res://tests/pie_chart_properties/rich_text_label.gd" id="4_ti7r4"]

[sub_resource type="Resource" id="Resource_ma4s8"]
script = ExtResource("3_ti7r4")
name = ""
weight = 1.0
color = Color(0, 1, 0, 1)
metadata/_custom_type_script = "uid://ce13kc3ly1b1y"

[sub_resource type="Resource" id="Resource_ixbmg"]
script = ExtResource("3_ti7r4")
name = ""
weight = 1.0
color = Color(0, 0, 1, 1)
metadata/_custom_type_script = "uid://ce13kc3ly1b1y"

[sub_resource type="Resource" id="Resource_ti7r4"]
script = ExtResource("3_ti7r4")
name = ""
weight = 1.0
color = Color(1, 0, 0, 1)
metadata/_custom_type_script = "uid://ce13kc3ly1b1y"

[sub_resource type="Resource" id="Resource_5d3rh"]
script = ExtResource("3_ti7r4")
name = ""
weight = 1.0
color = Color(1, 1, 0, 1)
metadata/_custom_type_script = "uid://ce13kc3ly1b1y"

[sub_resource type="Animation" id="Animation_5d3rh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:_rot")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.02]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../RichTextLabel:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../HSlider:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../TraceButton:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ti7r4"]
resource_name = "Stop_Rotation"
length = 9.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:_rot")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 8.48),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.02, 0.02, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(9),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../RichTextLabel:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 9),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../HSlider:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 9),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../TraceButton:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 9),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5d3rh"]
_data = {
&"RESET": SubResource("Animation_5d3rh"),
&"Stop_Rotation": SubResource("Animation_ti7r4")
}

[node name="PieChartProperties" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Subject" type="Control" parent="."]
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -15.0
offset_right = 40.0
offset_bottom = 25.0
pivot_offset = Vector2(596, 344)
script = ExtResource("1_25jiw")
metadata/_custom_type_script = "uid://biulhvvte3dvh"

[node name="1" type="RichTextLabel" parent="Subject"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_ti7r4")
entry = SubResource("Resource_ma4s8")
text_format = "Weeeeeeeeeeeeee"
metadata/_custom_type_script = "uid://w8g4uchaio4c"

[node name="2" type="RichTextLabel" parent="Subject"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_ixbmg")
entry = SubResource("Resource_ixbmg")
metadata/_custom_type_script = "uid://w8g4uchaio4c"

[node name="3" type="RichTextLabel" parent="Subject"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_ixbmg")
entry = SubResource("Resource_ti7r4")
metadata/_custom_type_script = "uid://w8g4uchaio4c"

[node name="4" type="RichTextLabel" parent="Subject"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_ixbmg")
entry = SubResource("Resource_5d3rh")
metadata/_custom_type_script = "uid://w8g4uchaio4c"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Subject"]
libraries = {
&"": SubResource("AnimationLibrary_5d3rh")
}
autoplay = "Stop_Rotation"

[node name="TraceButton" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 20.0
offset_top = 250.0
offset_right = 120.0
offset_bottom = 350.0
text = "Press here to trace label!"
text_overrun_behavior = 2
autowrap_mode = 3

[node name="HSlider" type="HSlider" parent="."]
visible = false
layout_mode = 0
offset_top = 560.0
offset_right = 1152.0
offset_bottom = 648.0
max_value = 10.0
step = 0.125
value = 1.0

[node name="RichTextLabel" type="RichTextLabel" parent="."]
visible = false
layout_mode = 0
offset_right = 1152.0
offset_bottom = 148.0
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
script = ExtResource("4_ti7r4")

[connection signal="pressed" from="TraceButton" to="Subject/1" method="_on_trace_button_pressed"]
[connection signal="pressed" from="TraceButton" to="TraceButton" method="hide"]
[connection signal="value_changed" from="HSlider" to="Subject" method="_change_factor"]
[connection signal="value_changed" from="HSlider" to="RichTextLabel" method="_on_h_slider_value_changed"]
